--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "http-dev": "cross-env NODE_ENV=development nodemon server-http.mjs",
-    "http-prod": "cross-env NODE_ENV=production node server-http.mjs"
+    "http-prod": "cross-env NODE_ENV=production node server-http.mjs",
+    "express-dev": "cross-env NODE_ENV=development nodemon server-express.mjs",
+    "express-prod": "cross-env NODE_ENV=production node server-express.mjs"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -24,6 +26,14 @@
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-unicorn": "^61.0.2",
     "globals": "^16.4.0",
+    "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "cross-env": "^10.0.0",
+    "express": "^5.1.0",
+    "http-errors": "^2.0.0",
+    "loglevel": "^1.9.2",
+    "morgan": "^1.10.1"
   }
 }
